# zaks-clouds-manager

./: Dockerfile  deployment.yml  docker-compose.yml  main.py  pyproject.toml  runAppLocal.sh
.github/workflows/: docker-container.yml
helpers/: __exceptions.py  constants.py
services/: channel.py  chat.py  message.py  url.py
services/__utils__/: chat.py  message.py  types.py
